# nexus

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALAR.bat  INSTALAR_MAC.command  README.md  STACK_ANALYSIS.md  launcher.py  main.py  nexus_cli.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
actions/: __init__.py  behaviors.py  explorer.py  looting.py  navigator.py  supply_manager.py
brain/: reactive.py  reasoning.py  strategic.py  vision_utils.py
config/: settings.yaml  settings.yaml.example
core/: agent.py  config.py  consciousness.py  event_bus.py  foundry.py  knowledge.py  recovery.py  state.py
core/loops/: __init__.py  action.py  consciousness.py  evolution.py  metrics.py  perception.py  reactive.py  reasoning.py  recovery.py  strategic.py  vision.py
core/state/: __init__.py  enums.py  game_state.py  models.py
dashboard/: __init__.py  app.html  server.py  tui.py  tui_models.py  tui_widgets.py
docs/: LOOP_TEMPLATE.py
games/: __init__.py  base.py  registry.py
games/tibia/: __init__.py  adapter.py
perception/: __init__.py  calibrator.py  game_reader.py  game_reader_v2.py  screen_capture.py  spatial_memory.py  spatial_memory_v2.py
scripts/: __init__.py  bump_version.py  install_hooks.sh  install_macos.sh  install_windows.ps1  setup_wizard.py
skills/: engine.py
skills/tibia/: __init__.py  darashia_dragons_ek.yaml
tests/: conftest.py  test_config.py  test_event_bus.py  test_state.py  test_strategic_brain.py
